samples/_failures_safe/1761196595_5fe6a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ecc94c49.c: In function ‘main’:
./samples/SAFE/__tmp_ecc94c49.c:135:5: error: expected declaration or statement at end of input
  135 |     read_matrix(&mat1, "A");
      |     ^~~~~~~~~~~
